--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,5 +31,13 @@ spring:
             enable: true
             required: true
 
+payment:
+  vnpay:
+    tmn-code: 03NCHO1Z
+    secret-key: WPAPJPIGP1HTS1221UOG81L5QT6HPWE0
+    init-payment-url: https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+    return-url: http://localhost:3000
+    timeout: 15
+
 pagination:
   product_summaries_size: 10
