--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,11 @@ jobs:
             ./mvnw clean package -DskipTests
 
             echo "🔨 Build Docker Image for Spring Boot..."
-            docker build -t smart-commerce-api .
+            docker build -t smart_commerce_api .
 
             echo "🚀 Run Docker Container..."
-            docker stop smart-commerce-api || true
-            docker rm smart-commerce-api || true
-            docker run -d --name smart-commerce-api \
+            docker stop smart_commerce_api || true
+            docker rm smart_commerce_api || true
+            docker run -d --name smart_commerce_api \
               -p 8080:8080 \
-              smart-commerce-api
+              smart_commerce_api
